perf(back): add ElementNormalizer to speed up JSON responses
